--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <form action="https://formspree.io/xrnrvwlx" method="POST">
-    <input type="text" name="imie">
-    <input type="text" name="nazwisko"> 
-    <input type="email" name="email">
-    <input type="tel" name="telefon">
+    <input type="text" name="imie" placeholder="imie">
+    <input type="text" name="nazwisko" placeholder="nazwisko"> 
+    <input type="email" name="email" placeholder="email">
+    <input type="tel" name="telefon" placeholder="numer,telefonu">
     <textarea name="message" ></textarea>
     <input type="submit" value="send">
     </form>
